--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://2021csb1069:<password>@cluster0.lmdvcqp.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://Anshika:Rocku18@cluster0.lmdvcqp.mongodb.net/?retryWrites=true&w=majority
 AUTH_EMAIL= 2021csb1069@iitrpr.ac.in
 AUTH_PASS=
