--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb+srv://Anshika:Rocku18@cluster0.lmdvcqp.mongodb.net/?retryWrites=true&w=majority
-AUTH_EMAIL= 2021csb1069@iitrpr.ac.in
-AUTH_PASS=
+AUTH_EMAIL= dep.p03.2024@gmail.com
+AUTH_PASS= DEPP03_AAAS
