--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.0.4",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
+    "react-toastify": "^10.0.3",
     "uuid": "^9.0.1"
   }
 }
